# otomata

./: .gitignore  .pnpm-approve-builds.yaml  LICENSE  README.md  index.html  licenses.txt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  constants.ts  main.css  main.ts  theme.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Button.vue  Controls.vue  DropdownItem.vue  Grid.vue  LicensesDialog.vue  ScaleDropdown.vue  SettingsDialog.vue
src/composables/: useGrid.ts
