[package]
name = "otomata"
version = "1.0.0"
description = "A generative musical sequencer"
authors = ["hemingtsai"]
edition = "2021"

[lib]
name = "otomata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
